--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -89,5 +89,5 @@ article {
 }
 
 .align-right {
-  justify-content: end;
+ justify-content: flex-end;
 }
